# cg-rogue

./: Cargo.toml  DesignNotes.txt  Notes.txt  README.md
assets/cards/: testcard.ron
assets/ui/: testui.ron
config/: display.ron  input.ron
src/: main.rs
src/components/: actions.rs  ai.rs  animation.rs  cards.rs  characters.rs  floor.rs  mod.rs  player.rs  ui.rs
src/entities/: floor_ui.rs  mod.rs
src/resources/: debug.rs  floor.rs  game.rs  mod.rs  player.rs  ui.rs
src/states/: game_play.rs  mod.rs
src/systems/: ai.rs  attack.rs  camera.rs  character.rs  damage.rs  debug.rs  interpolation.rs  mod.rs  mouse_input.rs  movement.rs  phase.rs  player.rs
src/util/: hex_grid.rs  mod.rs
