[package]
name = "cg_rogue"
version = "0.1.0"
authors = ["Tim Sims <thetimsims@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8" }
pathfinding = "2.0.4"
rand = "*"
ron = "*"
uuid = { version = "0.8", features = ["v4"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
